feat: added history rest api (#14)
* feat: added history rest api

* fix: converted connatcion manager to singleton

* fix: changed id from guid to string

* chore: cr
